--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             Our team is skilled in both desktop and <strong>laptop repair</strong>. Whether you're dealing with a slow computer, need virus removal, or require a hardware upgrade, we have you covered. We pride ourselves on our expert <strong>PC repair</strong> services.
         </p>
         
-        <img src="images/technician-repairing-pc.jpg" alt="Technician performing a PC repair on a motherboard">
+        <img src="technician-repairing-pc.jpg" alt="Technician performing a PC repair on a motherboard">
         
         <h2>Why Choose Quantum PC Repair?</h2>
         <p>We offer reliable service with a quick turnaround. For a free quote on your repair, please <a href="/contact.html">Contact Us Today!</a></p> <p>For more great tech tips, check out this excellent resource: <a href="https://www.howtogeek.com" target="_blank">How-To Geek</a>.</p> </main>
